# course-work

./: README.md
Dependable-and-Resilient-Computing/: README.md  ethereum_smart_contract.txt
Dependable-and-Resilient-Computing/PBFTRaft/: BFT Raft Report.docx  BKUP_Prop_node - Bkup.py  Client.py  Prop_node.py  election_verification_byzantine_node.py  message_types.py  network_ctrl.py  repeated_election_triggering.py  short_client_timeout_test.py  test.py  test2.py  timer.py  ~$T Raft Report.docx  ~WRL2755.tmp
artificial-intelligence/course-scheduler/: README.md  newcatalog.xlsx
big-data/: Pregel Presentation.pptx
big-data/dannymccormick3-homework-1/: DB.py  README.md  bash.py  bonds.csv  mlb.py  targeted_sum.py
big-data/dannymccormick3-homework-2/: 1_count.py  2_group.py  3_days.py  4_stock_join.py  5_avg_salary.pig  6_all_stars.pig  README.md  basics.py
big-data/dannymccormick3-homework-3/: 0_setup.py  1_spark_index.py  2_links.py  3_tfidf.py  4_page_rank.py  5_hbase.py  6_search.py  README.md  variables.py
hackathon/: README.txt
operating-systems/: README.md
operating-systems-2/: README.txt
operating-systems/OS-assignment-3-scheduling+priority/: .travis.yml  CMakeLists.txt  README.md  app.cpp  app.h  app.h~  main.cpp  utilities.cpp  utilities.h
operating-systems/OS-assignment-4-basic threading/: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.md~  example.cpp  task.cpp  task.h  test.sh
operating-systems/OS-assignment-5-Mutexes/: CMakeLists.txt  README.md  client.cpp~  client.h  client.h~  container.cpp  container.h~  main.cpp  server.cpp  server.h
(+190 files in other folders)
